# ANN_Project_End_to_End

./: .gitignore  ANN_Classify_Training.ipynb  ANN_Classify_prediction.ipynb  LICENSE  README.md  app.py  experiments.ipynb  main.py  model.h5  onehot_encoder_geo.pkl  prediction.ipynb  pyproject.toml  requirements.txt  scaler.pkl
