[project]
name = "ann-project-end-to-end"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=2.3.3",
    "scikeras>=0.13.0",
    "scikit-learn>=1.8.0",
    "streamlit>=1.54.0",
    "tensorboard>=2.20.0",
    "tensorflow>=2.20.0",
]
